--- a/FY19/Views/Shared/Widgets/ListView.cshtml
+++ b/FY19/Views/Shared/Widgets/ListView.cshtml
@@ -2,10 +2,15 @@
 @using FY19.Models.Widgets
 @using FY19.Models.InlineEditors
 @using System.Text.RegularExpressions;
+@using CMS.EventLog;
 @model ComponentViewModel<KMJ_ListProperties>
 
 @functions
 {
+
+    string clsName = string.Empty;
+
+
     private static string HtmlToPlainText(string html)
     {
         const string tagWhiteSpace = @"(>|$)(\W|\n|\r)+<";//matches one or more (white space or line breaks) between '>' and '<'
@@ -16,6 +21,8 @@
         var tagWhiteSpaceRegex = new Regex(tagWhiteSpace, RegexOptions.Multiline);
 
         var text = html;
+        if (text == null)
+            return string.Empty;
         //Decode html specific characters
         text = System.Net.WebUtility.HtmlDecode(text);
         //Remove tag whitespace/line breaks
@@ -24,6 +31,8 @@
         text = lineBreakRegex.Replace(text, Environment.NewLine);
         //Strip formatting
         text = stripFormattingRegex.Replace(text, string.Empty);
+
+        EventLogProvider.LogEvent(EventType.INFORMATION, "Text 2", "CODE", eventDescription: "text2 = " + text);
 
         return text;
     }
@@ -35,6 +44,8 @@
     string id = "linkId";
 
     string text1Prop = "Text1";
+
+    EventLogProvider.LogEvent(EventType.INFORMATION, "Link List HTML Id", "CODE", eventDescription: "text2 = " + text2);
 
     if (Model.Properties.Text1 != null)
     { text1 = HtmlToPlainText(Model.Properties.Text1.Replace("•", string.Empty)); }
@@ -94,21 +105,27 @@
         <p>List Widget:</p>
     </div>
 
+
     Html.RenderPartial("InlineEditors/TextEditor", new TextEditorViewModel
     {
         PropertyName = text1Prop,
-        Text = "• " + text1,
+        Text = (text1 == "") ? "" : "• " + text1,
         Class = className,
         Id = id
     });
 
-    Html.RenderPartial("InlineEditors/TextEditor", new TextEditorViewModel
+    if (text2 != null)
     {
-        PropertyName = "Text2",
-        Text = "• " + text2,
-        Class = className,
-        Id = id
-    });
+        EventLogProvider.LogEvent(EventType.INFORMATION, "nisulod sa text2", "CODE", eventDescription: "text2 = " + text2);
+
+        Html.RenderPartial("InlineEditors/TextEditor", new TextEditorViewModel
+        {
+            PropertyName = "Text2",
+            Text = (text2 == "•") ? null : "• " + text2,
+            Class = className,
+            Id = id
+        });
+    }
 
     Html.RenderPartial("InlineEditors/TextEditor", new TextEditorViewModel
     {
@@ -176,9 +193,11 @@
 }
 else
 {
-    <ul class="listBasic @className @Model.Properties.Class" id="@Model.Properties.Id">
+
+    <ul class="listBasic  @className @if (Model.Properties.Id != null) { @Model.Properties.Class; }" id="@Model.Properties.Id">
         <li>@text1</li>
-        <li>@text2</li>
+        @if (text2 != "• " || text2 != "•")
+        { <li>@text2</li> }
         <li>@text3</li>
         <li>@text4</li>
         <li>@text5</li>
