--- a/FY19/Views/Shared/Widgets/H3View.cshtml
+++ b/FY19/Views/Shared/Widgets/H3View.cshtml
@@ -59,6 +59,6 @@
 }
 else
 {
-<h3 class="h3 @Model.Properties.Class" id="@Model.Properties.Id" style="word-wrap: break-word;
-        white-space: pre-wrap;">@Html.Raw(HttpUtility.HtmlDecode(Model.Properties.Heading_Text))</h3>
+<h3 class="h3 @if (Model.Properties.Id != null) { @Model.Properties.Class; } " id="@Model.Properties.Id" style="word-wrap: break-word;
+    white-space: pre-wrap;">@Html.Raw(HttpUtility.HtmlDecode(Model.Properties.Heading_Text))</h3>
 }
