--- a/FY19/Views/Shared/Widgets/H4View.cshtml
+++ b/FY19/Views/Shared/Widgets/H4View.cshtml
@@ -56,6 +56,6 @@
 }
 else
 {
-<h4 class="h4 @Model.Properties.Class" id="@Model.Properties.Id" style="word-wrap: break-word;
-        white-space: pre-wrap;">@Html.Raw(HttpUtility.HtmlDecode(Model.Properties.Heading_Text))</h4>
+<h4 class="h4 @if (Model.Properties.Id != null) { @Model.Properties.Class; } " id="@Model.Properties.Id" style="word-wrap: break-word;
+    white-space: pre-wrap;">@Html.Raw(HttpUtility.HtmlDecode(Model.Properties.Heading_Text))</h4>
 }
