--- a/FY19/Views/Shared/Widgets/H2View.cshtml
+++ b/FY19/Views/Shared/Widgets/H2View.cshtml
@@ -53,7 +53,7 @@
     {
         PropertyWidget = "H2",
         PropertyName = "Heading_Text",
-        Text = Model.Properties.Heading_Text,
+        Text = Model.Properties.Heading_Text.Replace(Environment.NewLine, "<br/>"),
         Class = "h2 mt-lg-80 mb-lg-40 mt-sm-50 mb-sm-20 " + Model.Properties.Class
     });
 }
@@ -61,5 +61,5 @@ else
 {
     
 
-    <h2 class="h2 mt-lg-80 mb-lg-40 mt-sm-50 mb-sm-20 @Model.Properties.Class" id="@Model.Properties.Id" style="word-wrap: break-word;">@Html.Raw(HttpUtility.HtmlDecode(Model.Properties.Heading_Text))</h2>
+    <h2 class="h2 mt-lg-80 mb-lg-40 mt-sm-50 mb-sm-20 @Model.Properties.Class" id="@Model.Properties.Id" style="word-wrap: break-word;">@Html.Raw(HttpUtility.HtmlDecode(Model.Properties.Heading_Text.Replace(Environment.NewLine, "<br/>")))</h2>
 }
