--- a/FY19/Views/Shared/PageTemplates/KMJ_GenericCategoryTopView.cshtml
+++ b/FY19/Views/Shared/PageTemplates/KMJ_GenericCategoryTopView.cshtml
@@ -510,8 +510,8 @@
 
             @Html.Kentico().EditableArea("HeadHTMLZone", defaultSectionIdentifier: null, allowedWidgets: new[] { "FY19.HeadHTML" })
             @Html.Kentico().EditableArea("HeaderZone", defaultSectionIdentifier: null, allowedWidgets: new[] { "FY19.H2Header", "FY19.H3Header", "FY19.H4Header" })
-            <div id="contentsArea" class="content-wrapper">
-                <div id="contentsInner" class="content-inner content-inner-top">
+            <div id="contentsArea" > @*class="content-wrapper"*@
+                <div id="contentsInner"> @*class="content-inner content-inner-top"*@
                     <div class="main">
 
                         @Html.Kentico().EditableArea("ContentZone")
