--- a/FY19/Views/Shared/Widgets/ListView.cshtml
+++ b/FY19/Views/Shared/Widgets/ListView.cshtml
@@ -31,62 +31,91 @@
 
 @{
     string text1 = string.Empty, text2 = string.Empty, text3 = string.Empty, text4 = string.Empty, text5 = string.Empty, text6 = string.Empty, text7 = string.Empty, text8 = string.Empty, text9 = string.Empty, text10 = string.Empty;
-    string className = "linkClass";
-    string id = "linkId";
+    string className = Model.Properties.Class; // "linkClass";
+    string id = Model.Properties.Id; // "linkId";
 
     string text1Prop = "Text1";
 
     if (Model.Properties.Text1 != null)
-    { text1 = HtmlToPlainText(Model.Properties.Text1.Replace("•", string.Empty)); }
+    {
+        string tmpText = HtmlToPlainText(Model.Properties.Text1.Replace("•", string.Empty));
+        text1 = tmpText.Length > 1000 ? tmpText.Substring(0, 1000) : tmpText;
+    }
     else
     { text1 = Model.Properties.Text1; }
 
     if (Model.Properties.Text2 != null)
-    { text2 = HtmlToPlainText(Model.Properties.Text2.Replace("•", string.Empty)); }
+    { 
+        string tmpText = HtmlToPlainText(Model.Properties.Text2.Replace("•", string.Empty));
+        text2 = tmpText.Length > 1000 ? tmpText.Substring(0, 1000) : tmpText;
+    }
     else
     { text2 = Model.Properties.Text2; }
 
     if (Model.Properties.Text3 != null)
-    { text3 = HtmlToPlainText(Model.Properties.Text3.Replace("•", string.Empty)); }
+    { 
+        string tmpText = HtmlToPlainText(Model.Properties.Text3.Replace("•", string.Empty));
+        text3 = tmpText.Length > 1000 ? tmpText.Substring(0, 1000) : tmpText;
+    }
     else
     { text3 = Model.Properties.Text3; }
 
     if (Model.Properties.Text4 != null)
-    { text4 = HtmlToPlainText(Model.Properties.Text4.Replace("•", string.Empty)); }
+    { 
+        string tmpText = HtmlToPlainText(Model.Properties.Text4.Replace("•", string.Empty));
+        text4 = tmpText.Length > 1000 ? tmpText.Substring(0, 1000) : tmpText;
+    }
     else
     { text4 = Model.Properties.Text4; }
 
     if (Model.Properties.Text5 != null)
-    { text5 = HtmlToPlainText(Model.Properties.Text5.Replace("•", string.Empty)); }
+    { 
+        string tmpText = HtmlToPlainText(Model.Properties.Text5.Replace("•", string.Empty));
+        text5 = tmpText.Length > 1000 ? tmpText.Substring(0, 1000) : tmpText;
+    }
     else
     { text5 = Model.Properties.Text5; }
 
     if (Model.Properties.Text6 != null)
-    { text6 = HtmlToPlainText(Model.Properties.Text6.Replace("•", string.Empty)); }
+    { 
+        string tmpText = HtmlToPlainText(Model.Properties.Text6.Replace("•", string.Empty));
+        text6 = tmpText.Length > 1000 ? tmpText.Substring(0, 1000) : tmpText;
+    }
     else
     { text6 = Model.Properties.Text6; }
 
     if (Model.Properties.Text7 != null)
-    { text7 = HtmlToPlainText(Model.Properties.Text7.Replace("•", string.Empty)); }
+    { 
+        string tmpText = HtmlToPlainText(Model.Properties.Text7.Replace("•", string.Empty));
+        text7 = tmpText.Length > 1000 ? tmpText.Substring(0, 1000) : tmpText;
+    }
     else
     { text7 = Model.Properties.Text7; }
 
     if (Model.Properties.Text8 != null)
-    { text8 = HtmlToPlainText(Model.Properties.Text8.Replace("•", string.Empty)); }
+    { 
+        string tmpText = HtmlToPlainText(Model.Properties.Text8.Replace("•", string.Empty));
+        text8 = tmpText.Length > 1000 ? tmpText.Substring(0, 1000) : tmpText;
+    }
     else
     { text8 = Model.Properties.Text8; }
 
     if (Model.Properties.Text9 != null)
-    { text9 = HtmlToPlainText(Model.Properties.Text9.Replace("•", string.Empty)); }
+    { 
+        string tmpText = HtmlToPlainText(Model.Properties.Text9.Replace("•", string.Empty));
+        text9 = tmpText.Length > 1000 ? tmpText.Substring(0, 1000) : tmpText;
+    }
     else
     { text9 = Model.Properties.Text9; }
 
     if (Model.Properties.Text10 != null)
-    { text10 = HtmlToPlainText(Model.Properties.Text10.Replace("•", string.Empty)); }
+    { 
+        string tmpText = HtmlToPlainText(Model.Properties.Text10.Replace("•", string.Empty));
+        text10 = tmpText.Length > 1000 ? tmpText.Substring(0, 1000) : tmpText;
+    }
     else
     { text10 = Model.Properties.Text10; }
 }
-
 
 @if (Context.Kentico().PageBuilder().EditMode)
 {
@@ -176,16 +205,26 @@
 }
 else
 {
-    <ul class="listBasic @className @Model.Properties.Class" id="@Model.Properties.Id">
-        <li>@text1</li>
-        <li>@text2</li>
-        <li>@text3</li>
-        <li>@text4</li>
-        <li>@text5</li>
-        <li>@text6</li>
-        <li>@text7</li>
-        <li>@text8</li>
-        <li>@text9</li>
-        <li>@text10</li>
+    <ul class="listBasic @if (id != null) { @className; } " id="@id">
+        @if (text1 != null)
+        { <li>@text1</li> }
+        @if (text2 != null) 
+        {<li>@text2</li> }
+        @if (text3 != null)
+        {<li>@text3</li>}
+        @if (text4 != null)
+        {<li>@text4</li>}
+        @if (text5 != null)
+        {<li>@text5</li>}
+        @if (text6 != null)
+        {<li>@text6</li>}
+        @if (text7 != null)
+        {<li>@text7</li>}
+        @if (text8 != null)
+        {<li>@text8</li>}
+        @if (text9 != null)
+        {<li>@text9</li>}
+        @if (text10 != null)
+        {<li>@text10</li>}
     </ul>
 }
